--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "version": "0.0.1",
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
     "nodemon": "^3.0.1",
